--- a/imgui.ini
+++ b/imgui.ini
@@ -7,6 +7,18 @@ Pos=550,108
 Size=500,684
 
 [Window][BattleBeyz]
-Pos=60,60
-Size=592,308
+Pos=955,38
+Size=592,346
+
+[Window][Beyblade Settings]
+Pos=1142,57
+Size=299,528
+
+[Window][Settings and Launch Menu]
+Pos=14,3
+Size=592,250
+
+[Window][Options]
+Pos=1066,584
+Size=300,200
 
