--- a/imgui.ini
+++ b/imgui.ini
@@ -16,9 +16,25 @@ Size=299,528
 
 [Window][Settings and Launch Menu]
 Pos=14,3
-Size=619,894
+Size=592,278
 
 [Window][Options]
 Pos=1066,584
 Size=300,200
+
+[Window][Customize Screen]
+Pos=0,0
+Size=1600,900
+
+[Window][About Screen]
+Pos=0,0
+Size=1600,900
+
+[Window][Save Profile##title]
+Pos=530,395
+Size=540,110
+
+[Window][LoadingState]
+Pos=600,350
+Size=400,200
 
