Fixed Customize Menu UI

--- a/imgui.ini
+++ b/imgui.ini
@@ -39,6 +39,18 @@ Pos=600,350
 Size=400,200
 
 [Window][Main Menu]
-Pos=623,278
-Size=353,344
+Pos=624,288
+Size=352,324
+
+[Window][Customize Menu]
+Pos=0,0
+Size=1600,900
+
+[Window][New Profile]
+Pos=558,339
+Size=424,162
+
+[Window][New Beyblade]
+Pos=588,369
+Size=424,162
 
