added popupStates to CustomizeState

--- a/imgui.ini
+++ b/imgui.ini
@@ -48,9 +48,17 @@ Size=1600,900
 
 [Window][New Profile]
 Pos=558,339
-Size=424,162
+Size=400,110
 
 [Window][New Beyblade]
 Pos=588,369
 Size=424,162
+
+[Window][Confirm Deletion]
+Pos=561,398
+Size=478,104
+
+[Window][Confirm Profile Deletion]
+Pos=561,398
+Size=478,104
 
