add id to Profile and ProfileManager

--- a/imgui.ini
+++ b/imgui.ini
@@ -51,8 +51,8 @@ Pos=558,339
 Size=400,110
 
 [Window][New Beyblade]
-Pos=588,369
-Size=424,162
+Pos=588,370
+Size=400,138
 
 [Window][Confirm Deletion]
 Pos=561,398
@@ -61,4 +61,8 @@ Size=478,104
 [Window][Confirm Profile Deletion]
 Pos=561,398
 Size=478,104
+
+[Window][Confirm Beyblade Deletion]
+Pos=452,398
+Size=696,104
 
