Basic working InputManager

--- a/imgui.ini
+++ b/imgui.ini
@@ -15,8 +15,8 @@ Pos=1142,57
 Size=299,528
 
 [Window][Settings and Launch Menu]
-Pos=14,3
-Size=592,278
+Pos=255,150
+Size=242,216
 
 [Window][Options]
 Pos=1066,584
@@ -69,4 +69,8 @@ Size=696,104
 [Window][About]
 Pos=60,60
 Size=282,104
+
+[Window][Controls]
+Pos=60,60
+Size=508,160
 
