--- a/imgui.ini
+++ b/imgui.ini
@@ -15,8 +15,8 @@ Pos=1142,57
 Size=299,528
 
 [Window][Settings and Launch Menu]
-Pos=59,59
-Size=242,216
+Pos=0,300
+Size=400,600
 
 [Window][Options]
 Pos=1066,584
@@ -51,7 +51,7 @@ Pos=558,339
 Size=400,110
 
 [Window][New Beyblade]
-Pos=588,370
+Pos=588,371
 Size=400,138
 
 [Window][Confirm Deletion]
@@ -60,17 +60,21 @@ Size=478,104
 
 [Window][Confirm Profile Deletion]
 Pos=561,398
-Size=478,104
+Size=555,104
 
 [Window][Confirm Beyblade Deletion]
 Pos=452,398
-Size=696,104
+Size=592,104
 
 [Window][About]
 Pos=60,60
 Size=282,104
 
 [Window][Controls]
-Pos=29,70
-Size=508,160
+Pos=0,0
+Size=400,300
+
+[Window][Message Log]
+Pos=1397,0
+Size=465,523
 
