--- a/imgui.ini
+++ b/imgui.ini
@@ -15,8 +15,8 @@ Pos=1142,57
 Size=299,528
 
 [Window][Settings and Launch Menu]
-Pos=0,300
-Size=400,600
+Pos=0,301
+Size=400,602
 
 [Window][Options]
 Pos=1066,584
@@ -28,7 +28,7 @@ Size=1600,900
 
 [Window][About Screen]
 Pos=0,0
-Size=1600,900
+Size=1600,903
 
 [Window][Save Profile##title]
 Pos=530,395
@@ -39,12 +39,12 @@ Pos=600,350
 Size=400,200
 
 [Window][Main Menu]
-Pos=624,288
-Size=352,324
+Pos=628,258
+Size=344,384
 
 [Window][Customize Menu]
 Pos=0,0
-Size=1600,900
+Size=1600,903
 
 [Window][New Profile]
 Pos=558,340
@@ -72,9 +72,21 @@ Size=282,104
 
 [Window][Controls]
 Pos=0,0
-Size=400,300
+Size=400,301
 
 [Window][Message Log]
 Pos=1200,0
-Size=400,450
+Size=400,451
+
+[Window][Choose File##Dlg##SelectMesh]
+Pos=400,150
+Size=800,600
+
+[Window][Loading Screen]
+Pos=400,301
+Size=800,301
+
+[Table][0xBA7A1A7B,4]
+RefScale=24
+Column 0  Sort=0v
 
