--- a/game_data/imgui.ini
+++ b/game_data/imgui.ini
@@ -7,8 +7,9 @@ Pos=400,301
 Size=800,301
 
 [Window][Message Log]
-Pos=1200,0
-Size=400,451
+Pos=1040,263
+Size=728,372
+Collapsed=1
 
 [Window][Main Menu]
 Pos=628,258
@@ -37,4 +38,12 @@ Size=400,602
 [Window][Debug Screen]
 Pos=60,60
 Size=474,152
+
+[Window][Choose File##Dlg##SelectMesh]
+Pos=400,151
+Size=800,600
+
+[Table][0x9DA1072E,4]
+RefScale=24
+Column 0  Sort=0v
 
