--- a/game_data/imgui.ini
+++ b/game_data/imgui.ini
@@ -16,7 +16,7 @@ Pos=628,258
 Size=344,384
 
 [Window][Customize Menu]
-Pos=0,0
+Pos=14,17
 Size=1600,903
 
 [Window][New Profile]
@@ -42,6 +42,18 @@ Size=474,152
 [Window][Choose File##Dlg##SelectMesh]
 Pos=400,151
 Size=800,600
+
+[Window][Settings Menu]
+Pos=0,0
+Size=1600,903
+
+[Window][About Screen]
+Pos=0,0
+Size=1600,903
+
+[Window][Select Menu]
+Pos=0,2
+Size=1600,903
 
 [Table][0x9DA1072E,4]
 RefScale=24
