Added stadium to selection state

--- a/game_data/imgui.ini
+++ b/game_data/imgui.ini
@@ -7,9 +7,8 @@ Pos=400,301
 Size=800,301
 
 [Window][Message Log]
-Pos=1040,263
+Pos=1378,24
 Size=728,372
-Collapsed=1
 
 [Window][Main Menu]
 Pos=628,258
@@ -52,8 +51,12 @@ Pos=0,0
 Size=1600,903
 
 [Window][Select Menu]
-Pos=161,-4
+Pos=113,68
 Size=1600,903
+
+[Window][Stadium Controls]
+Pos=1198,296
+Size=262,176
 
 [Table][0x9DA1072E,4]
 RefScale=24
