Organize GameEngine init(), improve timers

--- a/game_data/imgui.ini
+++ b/game_data/imgui.ini
@@ -7,7 +7,7 @@ Pos=400,301
 Size=800,301
 
 [Window][Message Log]
-Pos=1378,24
+Pos=1057,-4
 Size=728,372
 
 [Window][Main Menu]
@@ -15,7 +15,7 @@ Pos=628,258
 Size=344,384
 
 [Window][Customize Menu]
-Pos=14,17
+Pos=-5,-3
 Size=1600,903
 
 [Window][New Profile]
@@ -35,7 +35,7 @@ Pos=0,301
 Size=400,602
 
 [Window][Debug Screen]
-Pos=60,60
+Pos=-1,34
 Size=474,152
 
 [Window][Choose File##Dlg##SelectMesh]
@@ -51,7 +51,7 @@ Pos=0,0
 Size=1600,903
 
 [Window][Select Menu]
-Pos=-88,49
+Pos=47,-164
 Size=1600,903
 
 [Window][Stadium Controls]
