--- a/game_data/imgui.ini
+++ b/game_data/imgui.ini
@@ -7,8 +7,8 @@ Pos=400,301
 Size=800,301
 
 [Window][Message Log]
-Pos=1057,-4
-Size=728,372
+Pos=688,11
+Size=928,425
 
 [Window][Main Menu]
 Pos=628,258
@@ -20,11 +20,11 @@ Size=1600,903
 
 [Window][New Profile]
 Pos=600,396
-Size=400,110
+Size=479,110
 
 [Window][New Beyblade]
 Pos=600,334
-Size=400,234
+Size=479,206
 
 [Window][Controls]
 Pos=0,0
@@ -51,12 +51,20 @@ Pos=0,0
 Size=1600,903
 
 [Window][Select Menu]
-Pos=-647,-280
+Pos=-53,21
 Size=1653,1032
 
 [Window][Stadium Controls]
 Pos=1198,296
 Size=262,176
+
+[Window][New Stadium]
+Pos=518,366
+Size=479,110
+
+[Window][Confirm Beyblade Deletion]
+Pos=584,399
+Size=431,104
 
 [Table][0x9DA1072E,4]
 RefScale=24
