Real-time modification for stadium in customize state

--- a/game_data/imgui.ini
+++ b/game_data/imgui.ini
@@ -10,3 +10,11 @@ Size=344,384
 Pos=0,0
 Size=1600,903
 
+[Window][Message Log]
+Pos=1200,0
+Size=400,451
+
+[Window][Debug Screen]
+Pos=1581,336
+Size=8,4
+
