--- a/game_data/imgui.ini
+++ b/game_data/imgui.ini
@@ -15,6 +15,18 @@ Pos=1200,0
 Size=400,451
 
 [Window][Debug Screen]
-Pos=1581,336
-Size=8,4
+Pos=99,80
+Size=474,460
+
+[Window][Select Menu]
+Pos=-108,-80
+Size=1600,903
+
+[Window][Controls]
+Pos=0,0
+Size=400,301
+
+[Window][Settings and Launch Menu]
+Pos=0,301
+Size=400,602
 
