--- a/game_data/imgui.ini
+++ b/game_data/imgui.ini
@@ -19,7 +19,7 @@ Pos=99,80
 Size=474,460
 
 [Window][Select Menu]
-Pos=-108,-80
+Pos=108,184
 Size=1600,903
 
 [Window][Controls]
@@ -29,4 +29,8 @@ Size=400,301
 [Window][Settings and Launch Menu]
 Pos=0,301
 Size=400,602
+
+[Window][Texture Debug]
+Pos=185,537
+Size=1260,706
 
